--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "chai-as-promised": "^7.1.1",
     "core-js": "^2.6.5",
+    "electron-store": "^4.0.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
