--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@slack/client": "^5.0.1",
+    "@slack/events-api": "^2.2.0",
+    "@slack/rtm-api": "^5.0.1",
+    "@slack/web-api": "^5.0.1",
     "chai-as-promised": "^7.1.1",
     "core-js": "^2.6.5",
     "electron-store": "^4.0.0",
